<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="37dp"
        android:typeface="serif"
        android:textColor="@color/darkturquoise"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textStyle="italic"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo"
        android:textColor="@color/darkgray"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_margin="@dimen/activity_horizontal_margin"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz"
            android:textColor="@color/darkgray"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            />
        <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:inputType="numberDecimal"
            android:background="@color/darkgray"
            android:id="@+id/n_quiz"
            android:layout_marginLeft="81dp"
            android:textColor="@color/darkcyan"
            android:textSize="25dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expo"
            android:textColor="@color/darkgray"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />
        <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:inputType="numberDecimal"
            android:background="@color/darkgray"
            android:id="@+id/n_expo"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="12dp"
            android:textColor="@color/darkcyan"
            android:textSize="25dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab"
            android:textColor="@color/darkgray"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />
        <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:inputType="numberDecimal"
            android:background="@color/darkgray"
            android:id="@+id/n_lab"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="16dp"
            android:textColor="@color/darkcyan"
            android:textSize="25dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p_final"
            android:textColor="@color/darkgray"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />
        <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:inputType="numberDecimal"
            android:background="@color/darkgray"
            android:id="@+id/n_py"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textColor="@color/darkcyan"
            android:textSize="25dp"
            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_gravity="right"
        android:text="@string/boton"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:background="@color/darkcyan"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/calcular"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_1"
            android:textColor="@color/darkgray"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@color/darkgray"
            android:id="@+id/n_final"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="40dp"
            android:textColor="@color/darkcyan"
            android:textSize="25dp"
            android:maxLength="6"

            />
    </LinearLayout>


</LinearLayout>
